@@ -334,6 +334,7 @@ $config = Zend_Registry::get('config');
 		$(':file').filestyle();
 	    });
 	</script>
+	<script src="js/accordion-icon.js"></script>
 	<script src="js/toggle-content.js"></script>
 	<script src="js/permissionpanel.js"></script>
     <!-- <script src="http://tablesorter.com/__jquery.tablesorter.min.js"></script> -->
